--- a/CSC209/Hwks/Hwk3/tutorials/tutorials.html
+++ b/CSC209/Hwks/Hwk3/tutorials/tutorials.html
@@ -39,19 +39,18 @@
 <h1 class="header">Tutorials! (2.5 hours)</h1>
 
 <ul>
-    <li><a href="tutorialCollection/bootstrap.html">Bootstrap Tutorial</a></li>
-    <li><a href="tutorialCollection/classes.html">Classes Tutorial</a></li>
-    <li><a href="tutorialCollection/classSyntax.html">Class Syntax</a></li>
-    <li><a href="tutorialCollection/externalCSS.html">External CSS</a></li>
-    <li><a href="tutorialCollection/id.html">ID Tutorial</a></li>
-    <li><a href="tutorialCollection/inlineCSS.html">Inline CSS</a></li>
-    <li><a href="tutorialCollection/internalCSS.html">Internal CSS</a></li>
-    <li><a href="tutorialCollection/moreStyles.html">More Styles</a></li>
-    <li><a href="tutorialCollection/navigationBar.html">Navigation Bar</a></li>
-    <li><a href="tutorialCollection/noteClass.html">Note Class</a></li>
-    <li><a href="tutorialCollection/w3css.html">W3.CSS Tutorial</a></li>
-    <li><a href="tutorialCollection/websiteLayout.html">Website Layout Practice</a></li>
-    <li><a href="../hwk2StartPage.html">Start Page</a></li>
+    <li><a href="allTutorials/write.html">Write Tutorial</a></li>
+    <li><a href="allTutorials/write2.html">Second Write Tutorial</a></li>
+    <li><a href="allTutorials/statements.html">Statements Syntax</a></li>
+    <li><a href="allTutorials/print.html">Print Tutorial</a></li>
+    <li><a href="allTutorials/demo.html">Demo Tutorial</a></li>
+    <li><a href="allTutorials/lightbulb.html">Lightbulb Tutorial</a></li>
+    <li><a href="allTutorials/innerHTML.html">Inner HTML</a></li>
+    <li><a href="allTutorials/windowAlert.html">Window Alert Tutorial</a></li>
+    <li><a href="allTutorials/stringMethods.html">String Methods</a></li>
+    <li><a href="allTutorials/arrayMethods.html">Array Methods</a></li>
+    <li><a href="allTutorials/forLoops.html">For Loops Tutorial</a></li>
+    <li><a href="../hwk3StartPage.html">Start Page</a></li>
 </ul>
 
 
