--- a/CSC209/Hwks/Hwk3/tutorials/tutorials.html
+++ b/CSC209/Hwks/Hwk3/tutorials/tutorials.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Tutorials for Homework 2</title>
+<title>Tutorials for Homework 3</title>
 <style>
     .header {
         background-color: #f1f1f1;
@@ -36,7 +36,7 @@
 </head>
 <body>
 
-<h1 class="header">Tutorials! (2.5 hours)</h1>
+<h1 class="header">Tutorials! (1 hour)</h1>
 
 <ul>
     <li><a href="allTutorials/write.html">Write Tutorial</a></li>
