--- a/CSC209/Hwks/Hwk3/technical/technical.html
+++ b/CSC209/Hwks/Hwk3/technical/technical.html
@@ -46,8 +46,8 @@
             
         }
     </script>
-    <button class="button"; onClick="swapStyleSheet('darkmode.css')">Invert</button>
-    <button class="button"; onClick="swapStyleSheet('lightmode.css')">Revert</button>
+    <button class="button"; onClick="swapStyleSheet('css/darkmode.css')">Invert</button>
+    <button class="button"; onClick="swapStyleSheet('css/lightmode.css')">Revert</button>
     <script type="text/javascript">
         function swapStyleSheet(sheet){
              document.getElementById('pagestyle').setAttribute('href',sheet);
