--- a/CSC209/Hwks/Hwk3/technical/technical.html
+++ b/CSC209/Hwks/Hwk3/technical/technical.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Technical for Homework 2</title>
+<title>Technical for Homework 3</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link id="pagestyle" rel="stylesheet" href="css/lightmode.css">
-<link rel="styelsheet" href="css/slideshow.css">
+<link id="pagestyle" rel="styelsheet" href="css/slideshow.css">
 </head>
 
 <body>
-<h1 class="header">Technical (3.5 hours)</h1>
+<h1 class="header">Technical (1.5 hours)</h1>
 <section>
 <nav>
     <ul>
