--- a/CSC209/Hwks/Hwk3/creative/creative.html
+++ b/CSC209/Hwks/Hwk3/creative/creative.html
@@ -5,15 +5,17 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link id="pagestyle" rel="stylesheet" href="green.css">
+<span id="hideWebsite"></span>
 <button onclick="clickHere()" id="newBtn" class="button">Click Here!</button>
 <script>
     function clickHere() {
         var websiteClick = document.getElementById("click");
         var newBtnStuff = document.getElementById("newBtn");
-
+        var blankWebsite = document.getElementById("hideWebsite");
         if (websiteClick.style.display === none) {
             newBtnStuff.innerHTML = "Click Here!";
             websiteClick.style.display = "inline";
+            blackWebsite.style.display = "none";
         }
     }
 </script>
