--- a/CSC209/Hwks/Hwk3/creative/creative.html
+++ b/CSC209/Hwks/Hwk3/creative/creative.html
@@ -11,7 +11,7 @@
         var websiteClick = document.getElementById("click");
         var newBtnStuff = document.getElementById("newBtn");
 
-        if (websiteClick.style.display === none) {
+        if (websiteClick.style.display === "none") {
             newBtnStuff.innerHTML = "Click Here!";
             websiteClick.style.display = "inline";
         }
