--- a/CSC209/Hwks/Hwk3/creative/creative.html
+++ b/CSC209/Hwks/Hwk3/creative/creative.html
@@ -7,7 +7,7 @@
 <link id="pagestyle" rel="stylesheet" href="green.css">
 <button onclick="clickHere()" id="newBtn" class="button">Hide Website</button>
 <div id="hiddenImage">
-    <img src="files/oops-sorry-my-mistake-man-600nw-1946473699.webp">
+    <img class="center" src="files/oops-sorry-my-mistake-man-600nw-1946473699.webp">
 </div>
 <script>
     function clickHere() {
