--- a/CSC209/Hwks/Hwk3/creative/creative.html
+++ b/CSC209/Hwks/Hwk3/creative/creative.html
@@ -6,9 +6,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link id="pagestyle" rel="stylesheet" href="green.css">
 <button onclick="clickHere()" id="newBtn" class="button">Hide Website</button>
-<span id="blank"></span><div id="hiddenImage">
+<span id="blank">
+<div id="hiddenImage">
     <img class="center" src="files/oops-sorry-my-mistake-man-600nw-1946473699.webp">
 </div>
+</span>
 <script>
     function clickHere() {
         var content = document.getElementById("click");
