--- a/CSC209/Hwks/Hwk3/creative/creative.html
+++ b/CSC209/Hwks/Hwk3/creative/creative.html
@@ -6,11 +6,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link id="pagestyle" rel="stylesheet" href="green.css">
 <button onclick="clickHere()" id="newBtn" class="button">Hide Website</button>
-<span id="blank">
+<span id="blank"></span>
 <div id="hiddenImage">
     <img class="center" src="files/oops-sorry-my-mistake-man-600nw-1946473699.webp">
 </div>
-</span>
 <script>
     function clickHere() {
         var content = document.getElementById("click");
@@ -21,13 +20,13 @@
         if (content.style.display === "none") {
             newBtnStuff.innerHTML = "Hide Website";
             content.style.display = "block";
-            hideImage.style.display = "inline";
+            hideImage.style.display = "none";
             hiddenImage.style.display = "none";
 
         } else {
             newBtnStuff.innerHTML = "Display Website";
             content.style.display = "none";
-            hideImage.style.display = "none";
+            hideImage.style.display = "block";
             hiddenImage.style.display = "block";
         }
     }
