--- a/CSC209/Hwks/Hwk3/creative/creative.html
+++ b/CSC209/Hwks/Hwk3/creative/creative.html
@@ -30,7 +30,7 @@
 </script>
 </head>
 <span id="blank"></span>
-<div id="hiddenImage">
+<div id="hiddenImage" style="display: none";>
     <img class="center" src="files/oops-sorry-my-mistake-man-600nw-1946473699.webp">
 </div>
 <div id="click">
