--- a/CSC209/Hwks/Hwk3/creative/creative.html
+++ b/CSC209/Hwks/Hwk3/creative/creative.html
@@ -118,7 +118,7 @@
     <p>Again, all images are taken from the internet.</p>
 </article>
 </section>
-<link href="javascript/creative.js">
+<script src="javascript/creative.js"></script>
 </body>
 
 </div>
