--- a/CSC209/Hwks/Hwk3/creative/creative.html
+++ b/CSC209/Hwks/Hwk3/creative/creative.html
@@ -4,7 +4,7 @@
 <title>Creative for Homework 3</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link id="pagestyle" rel="stylesheet" href="green.css">
+<link id="pagestyle" rel="stylesheet" href="css/green.css">
 
 <button onclick="clickHere()" id="newBtn" class="button">Hide Website</button>
 
@@ -37,9 +37,9 @@
     <p><span id="hide"></span><span id="more">Once again, I'm not the most creative so I decided to use the same format from technical in my creative part. I've decided to make it varying shades of green to match the Pusheen header (by the way, all images on this webpage were taken from the internet). I also included a little about me section to practice some other features I learned from the tutorials, such as an animated accordion-style feature with a few fun facts about me, like my favorite artists, my plans for the summer, and my hobbies!</accordion-style>. </span></p>
     <button onclick="myFunction()" id="myBtn" class="button">Read Me</button>
     <p> </p>
-    <button class="button"; onClick="swapStyleSheet('darkmode.css')">Black&White</button>
+    <button class="button"; onClick="swapStyleSheet('css/darkmode.css')">Black&White</button>
     <p> </p>
-    <button class="button"; onClick="swapStyleSheet('green.css')">Revert</button>
+    <button class="button"; onClick="swapStyleSheet('css/green.css')">Revert</button>
     <script type="text/javascript">
         function swapStyleSheet(sheet){
              document.getElementById('pagestyle').setAttribute('href',sheet);
