--- a/CSC209/Hwks/Hwk3/creative/creative.html
+++ b/CSC209/Hwks/Hwk3/creative/creative.html
@@ -7,7 +7,7 @@
 <link id="pagestyle" rel="stylesheet" href="css/green.css">
 
 <button onclick="clickHere()" id="newBtn" class="button">Hide Website</button>
-
+<p>CLICK THIS BUTTON FOR SOME MAGIC</p>
 </head>
 
 <span id="blank"></span>
