--- a/CSC209/Hwks/Hwk3/creative/creative.html
+++ b/CSC209/Hwks/Hwk3/creative/creative.html
@@ -11,7 +11,7 @@
 
 <span id="blank"></span>
 <div id="hiddenImage" style="display: none";>
-    <img class="center" src="files/oops-sorry-my-mistake-man-600nw-1946473699.webp">
+    <img class="center" src="files/good-bye-simpsons.gif">
 </div>
 <div id="click">
 
