--- a/CSC209/Hwks/Hwk3/creative/creative.html
+++ b/CSC209/Hwks/Hwk3/creative/creative.html
@@ -11,7 +11,9 @@
 
 <span id="blank"></span>
 <div id="hiddenImage" style="display: none";>
+    <p> </p>
     <img class="center" src="files/good-bye-simpsons.gif">
+    <p>IMAGE TAKEN FROM THE INTERNET</p>
 </div>
 <div id="click">
 
