--- a/CSC209/Hwks/Hwk3/technical/technical.html
+++ b/CSC209/Hwks/Hwk3/technical/technical.html
@@ -94,8 +94,8 @@
             <th>HWK4</th>
         </tr>
     </table>
-    <div class="slideshow-container" id="slideshowContainer">
-    <!--    
+    <div class="slideshow-container">
+   
       <div class="mySlides fade">
           <div class="numbertext">1 / 3</div>
           <img src="files/image1.jpeg" style="width:100%">
@@ -116,7 +116,7 @@
         
         <a class="prev" onclick="plusSlides(-1)">❮</a>
         <a class="next" onclick="plusSlides(1)">❯</a>
-    -->
+
     </div>
         <br>
         
