--- a/CSC209/startPage.html
+++ b/CSC209/startPage.html
@@ -30,5 +30,8 @@
 <p>
     <a href="Hwks/Hwk2/hwk2StartPage.html">HWK2</a>
 </p>
+<p>
+    <a href="Hwks/Hwk3/hwk3StartPage.html">HWK3</a>
+</p>
 </body>
 </html>
