--- a/CSC209/Hwks/Hwk4/tutorials/Tutorials/inputImage.html
+++ b/CSC209/Hwks/Hwk4/tutorials/Tutorials/inputImage.html
@@ -17,11 +17,11 @@
 
 
 <script>
-    $('#show_image').on("click", function(){
-        if( $('#your_img').is(':hidden')) {
-            $('#your_img').show();
+    $('#myCheckbox').on("click", function(){
+        if( $('#image').is(':hidden')) {
+            $('#image').show();
         }else{
-            $('#your_img').hide();
+            $('#image').hide();
         }
     });
 </script>
