--- a/CSC209/Hwks/Hwk4/tutorials/Tutorials/inputImage.html
+++ b/CSC209/Hwks/Hwk4/tutorials/Tutorials/inputImage.html
@@ -9,21 +9,17 @@
 
 <h3>A demonstration of how to access a Hidden Input Field</h3>
 
-<input type="checkbox" id="myCheckbox">Show Image</input>
-<div id="image">
-    <img src="../../Hwk3Redone/creative/files/good-bye-simpsons.gif" alt="random gif">
-</div>
+<input type="checkbox" id="myCheckbox" onclick="showImage()">Show Image</input>
+<div id="image"></div>
 <p>Click the button to get the value of the hidden input field.</p>
 
 
 <script>
-    $('#myCheckbox').on("click", function(){
-        if( $('#image').is(':hidden')) {
-            $('#image').show();
-        }else{
-            $('#image').hide();
+    function showImage() {
+        if(document.getElementById("myCheckbox").checked) {
+            document.getElementById("image").innerHTML= "<img src=''../../Hwk3Redone/creative/files/good-bye-simpsons.gif' alt='random gif'>";
         }
-    });
+    }
 </script>
 
 
