--- a/CSC209/Hwks/Hwk4/tutorials/Tutorials/inputImage.html
+++ b/CSC209/Hwks/Hwk4/tutorials/Tutorials/inputImage.html
@@ -11,6 +11,8 @@
     function showImage() {
         if(document.getElementById("myCheckbox").checked) {
             document.getElementById("image").innerHTML= "<img src='../../Hwk3Redone/creative/files/good-bye-simpsons.gif' alt='random gif'>";
+        } else {
+            document.getElementById("image").innerHTML="";
         }
     }
 </script>
