--- a/CSC209/Hwks/Hwk4/technical/Animation/animation.html
+++ b/CSC209/Hwks/Hwk4/technical/Animation/animation.html
@@ -41,7 +41,7 @@
             <option value=20>Medium</option>
             <option value=10>Fast</option>
         </select>
-        <button id="moveBlueBtn" onclick="moveBlueSq()">Move blue square</button> <br><br> 
+        <button id="moveBlueBtn" onclick="moveBlue()">Move blue square</button> <br><br> 
         
         <div id ="myContainer">
             <div id ="blueSq"></div>
