--- a/CSC209/Hwks/Hwk4/hwk4StartPage.html
+++ b/CSC209/Hwks/Hwk4/hwk4StartPage.html
@@ -10,5 +10,9 @@
     <a href="tutorials/tutorial.html">Tutorials</a>
 </h2>
 
+<h2>
+    <a href="technical/Animation/animation.html">In-Class Animation Activity</a>
+</h2>
+
 </body>
 </html>
