--- a/CSC209/Hwks/Hwk4/technical/technical.html
+++ b/CSC209/Hwks/Hwk4/technical/technical.html
@@ -18,6 +18,6 @@
 
 <button id="startButton">Start Movement</button>
 
-<script src="technical.html"></script>
+<script src="js/technical.js"></script>
 </body>
 </html>
