--- a/CSC209/Hwks/Hwk4/technical/technical.html
+++ b/CSC209/Hwks/Hwk4/technical/technical.html
@@ -8,6 +8,8 @@
 
 <h1>Hwk 4 Technical Page</h1>
 
+<button id="startButton">Start Movement</button>
+
 <div class="container">
     <div class="square" id="square1"></div>
     <div class="square" id="square2"></div>
