--- a/CSC209/Hwks/Hwk4/technical/technical.html
+++ b/CSC209/Hwks/Hwk4/technical/technical.html
@@ -10,15 +10,13 @@
 
 <button id="startButton">Start Movement</button>
 
-<div class="container">
+<div id="myContainer">
     <div class="square" id="square1"></div>
     <div class="square" id="square2"></div>
     <div class="square" id="square3"></div>
     <div class="square" id="square4"></div>
     <div class="square" id="square5"></div>
 </div>
-
-<button id="startButton">Start Movement</button>
 
 <script src="js/technical.js"></script>
 </body>
