--- a/CSC209/Hwks/Hwk4/technical/technical.html
+++ b/CSC209/Hwks/Hwk4/technical/technical.html
@@ -8,7 +8,7 @@
 
 <h1>Hwk 4 Technical Page</h1>
 
-<button id="startButton">Start Movement</button>
+<button id="startButton" onclick="startMovement()">Start Movement</button>
 
 <div id="myContainer">
     <div class="square" id="square1"></div>
