--- a/CSC209/Hwks/Hwk4/Hwk3Redone/technical/technical.html
+++ b/CSC209/Hwks/Hwk4/Hwk3Redone/technical/technical.html
@@ -94,7 +94,8 @@
             <th>HWK4</th>
         </tr>
     </table>
-    <div class="slideshow-container">
+    <div class="slideshow-container" id="slideshow">
+        <script src="javascript/javascript.js"> </script>
    
       <div class="mySlides fade">
           <div class="numbertext">1 / 3</div>
@@ -102,13 +103,13 @@
           <div class="text">This is me choosing the images for this assignment.</div>
         </div>
         
-        <div class="mySlides fade">
+        <div class="mySlides fade" style="display: none;">
           <div class="numbertext">2 / 3</div>
           <img src="files/image2.webp" style="width:100%">
           <div class="text">This is me eating dinner while doing this assignment.</div>
         </div>
         
-        <div class="mySlides fade">
+        <div class="mySlides fade" style="display: none;">
           <div class="numbertext">3 / 3</div>
           <img src="files/triumphant-success-reaching-new-heights-of-achievement-ai-generative-photo.jpg" style="width:100%">
           <div class="text">This will be me when I finish this assignment.</div>
