--- a/CSC209/Hwks/Hwk4/Hwk3Redone/technical/technical.html
+++ b/CSC209/Hwks/Hwk4/Hwk3Redone/technical/technical.html
@@ -95,7 +95,7 @@
         </tr>
     </table>
     <div class="slideshow-container" id="slideshow">
-        <script src="javascript/javascript.js"> </script>
+        <script src="javascript/javascript.js"> loadSlides() </script>
    
       <div class="mySlides fade">
           <div class="numbertext">1 / 3</div>
