--- a/CSC209/Hwks/Hwk4/Hwk3Redone/technical/technical.html
+++ b/CSC209/Hwks/Hwk4/Hwk3Redone/technical/technical.html
@@ -8,7 +8,7 @@
 <link id="pagestyle" rel="styelsheet" href="css/slideshow.css">
 </head>
 
-<body>
+<body onload="createSlideshow()">
 <h1 class="header">Technical (1.5 hours)</h1>
 <section>
 <nav>
@@ -97,7 +97,7 @@
     <div class="slideshow-container" id="slideshow">
         <script src="javascript/javascript.js"> loadSlides() </script>
    
-      <div class="mySlides fade">
+      <div class="mySlides fade" style="display: block;">
           <div class="numbertext">1 / 3</div>
           <img src="files/image1.jpeg" style="width:100%">
           <div class="text">This is me choosing the images for this assignment.</div>
