--- a/CSC209/Hwks/Hwk4/hwk4StartPage.html
+++ b/CSC209/Hwks/Hwk4/hwk4StartPage.html
@@ -7,11 +7,15 @@
 
 <h1>Hwk 4 Start Page</h1>
 <h2>
-    <a href="tutorials/tutorial.html">Tutorials</a>
+    <a href="tutorials/tutorial.html">Tutorials (2 Hours)</a>
 </h2>
 
 <h2>
-    <a href="technical/Animation/animation.html">In-Class Animation Activity</a>
+    <a href="technical/Animation/animation.html">In-Class Animation Activity (45 Minutes)</a>
+</h2>
+
+<h2>
+    <a href="technical/technical.html">Level 2 (4 Hours, can't get it to work) </a>
 </h2>
 
 </body>
