--- a/CSC209/Hwks/Hwk4/hwk4StartPage.html
+++ b/CSC209/Hwks/Hwk4/hwk4StartPage.html
@@ -18,5 +18,9 @@
     <a href="technical/technical.html">Level 2 (4 Hours, can't get it to work) </a>
 </h2>
 
+<h2> 
+    <a href="Hwk3Redone/hwk3StartPage.html">Hwk 3 Redone</a>
+</h2>
+
 </body>
 </html>
