--- a/CSC209/Weeks/Week5/week5StartPage.html
+++ b/CSC209/Weeks/Week5/week5StartPage.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Week 5 <In-Class></In-Class></title>
+<title>Week 5 In Class</title>
 </head>
 <body>
-
+<h1>Week 5</h1>
 <ul>
     <li>
         <a href="Tutorials/drawCanvas.html">Draw Canvas Tutorial</a>
