--- a/CSC209/Weeks/Week5/Tutorials/lineCanvas.html
+++ b/CSC209/Weeks/Week5/Tutorials/lineCanvas.html
@@ -19,10 +19,17 @@ ctx.beginPath();
 ctx.moveTo(0,0);
 
 // Set an end-point
-ctx.lineTo(200,100);
+ctx.lineTo(300,150);
 
 // Draw it
 ctx.stroke();
+
+//independent
+ctx.beginPath();
+ctx.moveTo(300,150);
+ctx.lineTo(0,300);
+ctx.stroke();
+
 </script>
 
 </body>
