--- a/CSC209/Weeks/Week5/Tutorials/lineCanvas.html
+++ b/CSC209/Weeks/Week5/Tutorials/lineCanvas.html
@@ -30,6 +30,12 @@ ctx.moveTo(300,150);
 ctx.lineTo(0,300);
 ctx.stroke();
 
+ctx.beginPath();
+ctx.moveTo(0, 300);
+ctx.lineTo(150, 300);
+ctx.stroke();
+
+
 </script>
 
 </body>
