--- a/CSC209/Weeks/Week5/week5StartPage.html
+++ b/CSC209/Weeks/Week5/week5StartPage.html
@@ -12,6 +12,9 @@
     <li>
         <a href="Tutorials/lineCanvas.html">Line Canvas Tutorial</a>
     </li>
+    <li>
+        <a href="Tutorials/circleCanvas.html">Circle Canvas Tutorial</a>
+    </li>
 </ul>
 
 <a href="https://www.w3schools.com">This is how I learned to do this</a>
