--- a/CSC209/Weeks/Week5/Tutorials/circleCanvas.html
+++ b/CSC209/Weeks/Week5/Tutorials/circleCanvas.html
@@ -14,6 +14,10 @@ const ctx = canvas.getContext("2d");
 ctx.beginPath();
 ctx.arc(150,150,50,0,2*Math.PI);
 ctx.stroke();
+
+ctx.beginPath();
+ctx.arc(Math.random(), Math.random(), 5, 0, 2*Math.PI);
+ctx.stroke();
 </script>
 
 </body>
