--- a/CSC209/Weeks/Week5/Tutorials/circleCanvas.html
+++ b/CSC209/Weeks/Week5/Tutorials/circleCanvas.html
@@ -15,9 +15,9 @@ ctx.beginPath();
 ctx.arc(150,150,50,0,2*Math.PI);
 ctx.stroke();
 
-ctx.beginPath();
-ctx.arc(Math.getRandomInt(0, 300), Math.getRandomInt(0, 300), 5, 0, 2*Math.PI);
-ctx.stroke();
+/* ctx.beginPath();
+ctx.arc(, 5, 0, 2*Math.PI);
+ctx.stroke(); */
 </script>
 
 </body>
