--- a/CSC209/Weeks/Week5/Tutorials/lineCanvas.html
+++ b/CSC209/Weeks/Week5/Tutorials/lineCanvas.html
@@ -28,11 +28,15 @@ ctx.stroke();
 ctx.beginPath();
 ctx.moveTo(300,150);
 ctx.lineTo(0,300);
+ctx.lineWidth(5);
 ctx.stroke();
+
+
 
 ctx.beginPath();
 ctx.moveTo(0, 300);
 ctx.lineTo(150, 0);
+ctx.strokeStyle = "pink";
 ctx.stroke();
 
 
