--- a/CSC209/Weeks/Week5/Tutorials/lineCanvas.html
+++ b/CSC209/Weeks/Week5/Tutorials/lineCanvas.html
@@ -28,7 +28,7 @@ ctx.stroke();
 ctx.beginPath();
 ctx.moveTo(300,150);
 ctx.lineTo(0,300);
-ctx.lineWidth(5);
+ctx.lineWidth = 5;
 ctx.stroke();
 
 
@@ -36,7 +36,7 @@ ctx.stroke();
 ctx.beginPath();
 ctx.moveTo(0, 300);
 ctx.lineTo(150, 0);
-ctx.strokeStyle = "pink";
+ctx.strokeStyle = "red";
 ctx.stroke();
 
 
