--- a/CSC209/Weeks/Week5/Tutorials/lineCanvas.html
+++ b/CSC209/Weeks/Week5/Tutorials/lineCanvas.html
@@ -36,7 +36,7 @@ ctx.stroke();
 ctx.beginPath();
 ctx.moveTo(0, 300);
 ctx.lineTo(150, 0);
-ctx.strokeStyle = "red";
+ctx.strokeStyle = "aquamarine";
 ctx.stroke();
 
 
