--- a/CSC209/Weeks/Week5/Tutorials/level2.html
+++ b/CSC209/Weeks/Week5/Tutorials/level2.html
@@ -31,7 +31,7 @@ ctx.stroke();
 
 ctx.beginPath();
 ctx.moveTo(x, y);
-ctx.lineTo(x, y + 20);
+ctx.lineTo(x - 20, y + 20);
 ctx.stroke();
 
 </script>
