--- a/CSC209/Weeks/Week5/week5StartPage.html
+++ b/CSC209/Weeks/Week5/week5StartPage.html
@@ -21,6 +21,9 @@
     <li>
         <a href="Tutorials/level2.html">Level 2</a>
     </li>
+    <li>
+        <a href="Tutorials/level3.html">Level 3</a>
+    </li>
 </ul>
 
 <a href="https://www.w3schools.com">This is how I learned to do this</a>
