--- a/CSC209/Weeks/Week5/Tutorials/level3.html
+++ b/CSC209/Weeks/Week5/Tutorials/level3.html
@@ -3,7 +3,7 @@
 <body>
 <h1>HTML5 Canvas</h1>
 
-<canvas id="myCanvas" width="300" height="300" style="border:1px solid black;">
+<canvas id="myCanvas" width="300" height="300" style="border:1px solid black;" onload="drawParticles()">
 Sorry, your browser does not support canvas.
 </canvas>
 
@@ -50,7 +50,7 @@ ctx.lineTo(x2 + 20, y2 - 20);
 ctx.stroke();
 */
 const particles = 5;
-const symbols = ['+', '-'];
+//const symbols = ['+', '-'];
 
 function drawParticles() {
     for (let i = 0; i < particles; i++){
