--- a/CSC209/Weeks/Week5/Tutorials/level3.html
+++ b/CSC209/Weeks/Week5/Tutorials/level3.html
@@ -3,7 +3,7 @@
 <body>
 <h1>HTML5 Canvas</h1>
 
-<canvas id="myCanvas" width="300" height="300" style="border:1px solid black;" onload="drawParticles()">
+<canvas id="myCanvas" width="300" height="300" style="border:1px solid black;">
 Sorry, your browser does not support canvas.
 </canvas>
 
