--- a/CSC209/Hwks/Hwk5/Technical/Level1.html
+++ b/CSC209/Hwks/Hwk5/Technical/Level1.html
@@ -27,6 +27,7 @@
         function drawPoint() {
             ctx.beginPath();
             ctx.arc(point.x, point.y, point.radius, 0, Math.PI * 2);
+            ctx.strokeStyle = point.color;
             ctx.stroke();
         }
 
