--- a/CSC209/Hwks/Hwk5/Technical/Level1.html
+++ b/CSC209/Hwks/Hwk5/Technical/Level1.html
@@ -18,10 +18,10 @@
         const ctx = canvas.getContext('2d');
 
         // Point properties
-        const point = { x: 150, y: 150, radius: 10, color: 'red' };
+        const point = { x: 150, y: 150, radius: 10, color: 'blue' };
 
         // Vector properties
-        const vector = { x: 20, y: 20, color: 'blue' };
+        const vector = { x: 15, y: 15, color: 'blue' };
 
         // Draw the point
         function drawPoint() {
