--- a/CSC209/Hwks/Hwk5/Technical/Level1.html
+++ b/CSC209/Hwks/Hwk5/Technical/Level1.html
@@ -13,6 +13,6 @@
 <body>
     <h1>Level 1</h1>
     <canvas id="myCanvas" width="300" height="300"></canvas>
-    <script src="js/script.js"></script>
+    <script src="js/script1.js"></script>
 </body>
 </html>
