--- a/CSC209/Hwks/Hwk5/Technical/Level2.html
+++ b/CSC209/Hwks/Hwk5/Technical/Level2.html
@@ -13,6 +13,6 @@
 <body>
     <h1>Level 2</h1>
     <canvas id="myCanvas" width="300" height="300"></canvas>
-    <script src="js/script.js"></script>
+    <script src="js/script2.js"></script>
 </body>
 </html>
