--- a/CSC209/Hwks/Hwk5/Technical/Level4.html
+++ b/CSC209/Hwks/Hwk5/Technical/Level4.html
@@ -15,6 +15,8 @@
     <button id="generateNewPoints">Click Here</button> 
     <br> </br>
     <canvas id="myCanvas" width="300" height="300"></canvas>
-    <script src="js/script4.js"></script>
+    <script src="js/script4.js">
+        const NRPTS = 5;
+    </script>
 </body>
 </html>
