--- a/CSC209/Hwks/Hwk5/Technical/Level4.html
+++ b/CSC209/Hwks/Hwk5/Technical/Level4.html
@@ -11,12 +11,13 @@
     </style>
 </head>
 <body>
+    <script>
+        const NRPTS = 5; 
+    </script>
     <h1>Level 4</h1>
     <button id="generateNewPoints">Click Here</button> 
     <br> </br>
     <canvas id="myCanvas" width="300" height="300"></canvas>
-    <script src="js/script4.js">
-        const NRPTS = 5;
-    </script>
+    <script src="js/script4.js"></script>
 </body>
 </html>
