--- a/CSC209/Hwks/Hwk5/Technical/Level6.html
+++ b/CSC209/Hwks/Hwk5/Technical/Level6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Level 5</title>
+    <title>Level 6</title>
     <style>
         canvas {
             border: 1px solid black;
@@ -11,10 +11,13 @@
     </style>
 </head>
 <body>
-    <h1>Level 5</h1>
-    <button id="generateNewLocations">Click Here</button>
+    <script>
+        const NRPTS = 7; 
+    </script>
+    <h1>Level 6</h1>
+    <button id="generateNewPoints">Click Here</button> 
     <br> </br>
     <canvas id="myCanvas" width="300" height="300"></canvas>
-    <script src="js/script5.js"></script>
+    <script src="js/script4.js"></script>
 </body>
 </html>
