--- a/CSC209/Hwks/Hwk5/Technical/Level6.html
+++ b/CSC209/Hwks/Hwk5/Technical/Level6.html
@@ -11,16 +11,17 @@
     </style>
 </head>
 <body>
-    <h1>Level 6</h1>
-    <button id="generateNewPoints">Click Here</button> 
-    <br> </br>
-    <canvas id="myCanvas" width="300" height="300"></canvas>
-    <script src="js/script6.js">
+    <script>
         const canvas = document.getElementById('myCanvas');
         const ctx = canvas.getContext('2d');
         const button = document.getElementById("generateNewPoints");
         const NRPTS = 7; 
         const NRSTEPS_MAX = 100;
     </script>
+    <h1>Level 6</h1>
+    <button id="generateNewPoints">Click Here</button> 
+    <br> </br>
+    <canvas id="myCanvas" width="300" height="300"></canvas>
+    <script src="js/script6.js"></script>
 </body>
 </html>
