--- a/CSC209/Hwks/Hwk5/Technical/Level3.html
+++ b/CSC209/Hwks/Hwk5/Technical/Level3.html
@@ -11,6 +11,13 @@
     </style>
 </head>
 <body>
+    <script>
+        const points = [
+            { x: 0, y: 0, radius: 10, color: 'red', vector: { x: 15, y: 15 } },
+            { x: 0, y: 0, radius: 10, color: 'green', vector: { x: -15, y: 15 } },
+            { x: 0, y: 0, radius: 10, color: 'blue', vector: { x: 15, y: -15 } }
+        ];
+    </script>
     <h1>Level 3</h1>
     <button id="generateNewLocations">Click Here</button>
     <br> </br>
