--- a/CSC209/Hwks/Hwk5/Technical/Level5.html
+++ b/CSC209/Hwks/Hwk5/Technical/Level5.html
@@ -11,6 +11,10 @@
     </style>
 </head>
 <body>
+    <script>
+        const NRSTEPS_MAX = 100;
+        let NRSTEPS = NRSTEPS_MAX;
+    </script>
     <h1>Level 5</h1>
     <button id="generateNewLocations">Click Here</button>
     <br> </br>
