--- a/CSC209/Hwks/Hwk5/Technical/Level7.html
+++ b/CSC209/Hwks/Hwk5/Technical/Level7.html
@@ -12,7 +12,6 @@
 </head>
 <body>
     <script>
-        const NRPTS = parseInt(numPoints).value; 
         const NRSTEPS_MAX = 100;
         let NRSTEPS = NRSTEPS_MAX;
         let points = [];
@@ -22,6 +21,8 @@
     <button id="generateNewPoints">Click Here</button> 
     <br> </br>
     <canvas id="myCanvas" width="300" height="300"></canvas>
-    <script src="js/script7.js"></script>
+    <script src="js/script7.js">
+        const NRPTS = parseInt(numPoints).value; 
+    </script>
 </body>
 </html>
