--- a/CSC209/Hwks/Hwk5/Technical/Level7.html
+++ b/CSC209/Hwks/Hwk5/Technical/Level7.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <script>
+        const NRPTS = 0; 
         const NRSTEPS_MAX = 100;
         let NRSTEPS = NRSTEPS_MAX;
         let points = [];
@@ -21,8 +22,6 @@
     <button id="generateNewPoints">Click Here</button> 
     <br> </br>
     <canvas id="myCanvas" width="300" height="300"></canvas>
-    <script src="js/script7.js">
-        const NRPTS = parseInt(numPoints).value; 
-    </script>
+    <script src="js/script7.js"></script>
 </body>
 </html>
