--- a/CSC209/Hwks/Hwk5/Technical/Level7.html
+++ b/CSC209/Hwks/Hwk5/Technical/Level7.html
@@ -17,7 +17,7 @@
         let points = [];
     </script>
     <h1>Level 6</h1>
-    <input type="number" id="numPoints">How many points?</input>
+    <input id="numPoints">How many points?</input>
     <button id="generateNewPoints">Click Here</button> 
     <br> </br>
     <canvas id="myCanvas" width="300" height="300"></canvas>
