--- a/CSC209/Hwks/Hwk5/Technical/Level7.html
+++ b/CSC209/Hwks/Hwk5/Technical/Level7.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <script>
-        const NRPTS = 0;
+        let NRPTS = 0;
         const NRSTEPS_MAX = 100;
         let NRSTEPS = NRSTEPS_MAX;
         let points = [];
