--- a/CSC209/Hwks/Hwk5/Technical/Level7.html
+++ b/CSC209/Hwks/Hwk5/Technical/Level7.html
@@ -18,7 +18,9 @@
         let points = [];
     </script>
     <h1>Level 7</h1>
-    <input id="numPoints">How many points?</input>
+    <label>
+        <input id="numPoints">How many points?</input>
+    </label>
     <button id="generateNewPoints">Click Here</button> 
     <br> </br>
     <canvas id="myCanvas" width="300" height="300"></canvas>
