--- a/CSC209/Hwks/Hwk5/Technical/Level7.html
+++ b/CSC209/Hwks/Hwk5/Technical/Level7.html
@@ -18,10 +18,8 @@
         let points = [];
     </script>
     <h1>Level 7</h1>
-    <label>
-        <input id="numPoints">How many points?</input>
-    </label>
-    <button id="generateNewPoints">Click Here</button> 
+    <input id="numPoints" label="How many points?"></input>
+    <button id="generateNewPoints">Animate</button> 
     <br> </br>
     <canvas id="myCanvas" width="300" height="300"></canvas>
     <script src="js/script7.js"></script>
