--- a/CSC209/Hwks/Hwk5/Technical/Level7.html
+++ b/CSC209/Hwks/Hwk5/Technical/Level7.html
@@ -18,7 +18,9 @@
         let points = [];
     </script>
     <h1>Level 7</h1>
-    <input id="numPoints" label="How many points?"></input>
+    <p>How many points?</p>
+    <input id="numPoints"></input>
+    <br> </br>
     <button id="generateNewPoints">Animate</button> 
     <br> </br>
     <canvas id="myCanvas" width="300" height="300"></canvas>
