--- a/CSC209/Hwks/Hwk5/Technical/Level8.html
+++ b/CSC209/Hwks/Hwk5/Technical/Level8.html
@@ -20,10 +20,12 @@
     <h1>Level 7</h1>
     <p>How many points?</p>
     <input id="numPoints"></input>
+    <button id="generateNewPoints">Generate Points</button> 
     <br> </br>
-    <button id="generateNewPoints">Animate</button> 
+    <button id="animate">Animate</button>
     <br> </br>
+    <button id="reset">Reset</button>
     <canvas id="myCanvas" width="300" height="300"></canvas>
-    <script src="js/script7.js"></script>
+    <script src="js/script8.js"></script>
 </body>
 </html>
