--- a/CSC209/Hwks/Hwk5/Technical/Level9.html
+++ b/CSC209/Hwks/Hwk5/Technical/Level9.html
@@ -27,6 +27,9 @@
     <canvas id="myCanvas" width="300" height="300"></canvas>
     <br> </br>
     <button id="reset">Reset</button>
+    <label for="showTrace">Show Trace</label>
+    <input type="checkbox" id="showTrace">
+
     <script src="js/script9.js"></script>
 </body>
 </html>
