--- a/CSC209/Hwks/Hwk5/Technical/Level9.html
+++ b/CSC209/Hwks/Hwk5/Technical/Level9.html
@@ -16,6 +16,7 @@
         const NRSTEPS_MAX = 100;
         let NRSTEPS = NRSTEPS_MAX;
         let points = [];
+        let vectors = [];
     </script>
     <h1>Level 7</h1>
     <p>How many points?</p>
