--- a/CSC209/Hwks/Hwk5/Creative/creative.html
+++ b/CSC209/Hwks/Hwk5/Creative/creative.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Level 8</title>
+    <title>Level 7</title>
     <style>
         canvas {
             border: 1px solid black;
@@ -17,9 +17,14 @@
         let NRSTEPS = NRSTEPS_MAX;
         let points = [];
     </script>
-    <h1>Level 8</h1>
+    <h1>Level 7</h1>
     <p>How many points?</p>
     <input id="numPoints"></input>
+    <select name="temp" id="temp">
+        <option value="high">High</option>
+        <option value="medium">Medium</option>
+        <option value="low">Low</option>
+    </select>
     <button id="generateNewPoints">Generate Points</button> 
     <br> </br>
     <button id="animate">Animate</button>
