--- a/CSC209/Hwks/Hwk5/Creative/creative.html
+++ b/CSC209/Hwks/Hwk5/Creative/creative.html
@@ -18,13 +18,15 @@
         let points = [];
     </script>
     <h1>Level 7</h1>
-    <p>How many points?</p>
-    <input id="numPoints"></input>
+    <label for="temp">Choose a Temperature:</label>
     <select name="temp" id="temp">
         <option value="high">High</option>
         <option value="medium">Medium</option>
         <option value="low">Low</option>
     </select>
+    <br> </br>
+    <p>How many points?</p>
+    <input id="numPoints"></input>
     <button id="generateNewPoints">Generate Points</button> 
     <br> </br>
     <button id="animate">Animate</button>
