--- a/CSC209/Hwks/Hwk5/Creative/creative.html
+++ b/CSC209/Hwks/Hwk5/Creative/creative.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Level 7</title>
+    <title>Creative</title>
     <style>
         canvas {
             border: 1px solid black;
@@ -17,14 +17,13 @@
         let NRSTEPS = NRSTEPS_MAX;
         let points = [];
     </script>
-    <h1>Level 7</h1>
+    <h1>Creative: Adjust the Temperature!</h1>
     <label for="temp">Choose a Temperature:</label>
     <select name="temp" id="temp">
         <option value="high">High</option>
         <option value="medium">Medium</option>
         <option value="low">Low</option>
     </select>
-    <br> </br>
     <p>How many points?</p>
     <input id="numPoints"></input>
     <button id="generateNewPoints">Generate Points</button> 
