--- a/CSC209/Hwks/Hwk5/Technical/Level8.html
+++ b/CSC209/Hwks/Hwk5/Technical/Level8.html
@@ -27,6 +27,6 @@
     <canvas id="myCanvas" width="300" height="300"></canvas>
     <br> </br>
     <button id="reset">Reset</button>
-    <script src="js/creative.js"></script>
+    <script src="js/script8.js"></script>
 </body>
 </html>
