--- a/CSC209/Hwks/Hwk6/creative/creative.html
+++ b/CSC209/Hwks/Hwk6/creative/creative.html
@@ -6,6 +6,9 @@
 <body>
 
 <h1>Game of Life</h1>
+<script>
+    let NRSTEPS = 0;
+</script>
 <button id="next">Next</button>
 <button id="start">Start</button>
 <br></br>
