--- a/CSC209/Hwks/Hwk6/technical/technical.html
+++ b/CSC209/Hwks/Hwk6/technical/technical.html
@@ -8,7 +8,7 @@
 <h1>Game of Life</h1>
 <button id="next">Next</button>
 <br></br>
-<canvas id="gameCanvas" width="500" height="500" style="border:1px solid #000000;"></canvas>
+<canvas id="canvas" width="500" height="500" style="border:1px solid #000000;"></canvas>
 <script src="js/script.js"></script>
 </body>
 </html>
