--- a/CSC209/Hwks/Hwk6/creative/creative.html
+++ b/CSC209/Hwks/Hwk6/creative/creative.html
@@ -12,7 +12,7 @@
 <button id="next">Next</button>
 <button id="start">Start</button>
 <br></br>
-<canvas id="gameCanvas" width="500" height="500" style="border:1px solid #000000;"></canvas>
+<canvas id="canvas" width="500" height="500" style="border:1px solid #000000;"></canvas>
 <script src="js/script.js"></script>
 </body>
 </html>
