--- a/CSC209/Hwks/Hwk6/hwk6StartPage.html
+++ b/CSC209/Hwks/Hwk6/hwk6StartPage.html
@@ -9,13 +9,13 @@
 
 <ul>
     <li>
-        <a href="tutorials/tutorials.html">Tutorials!</a>
+        <a href="tutorials/tutorials.html">Tutorials! - 30 min</a>
     </li>
     <li>
-        <a href="technical/technical.html">Technical!</a>
+        <a href="technical/technical.html">Technical! - 3 hours</a>
     </li>
     <li>
-        <a href="creative/creative.html">Creative!</a>
+        <a href="creative/creative.html">Creative! - 30 min</a>
     </li>
 </ul>
 
