--- a/CSC209/Hwks/Hwk6/technical/technical.html
+++ b/CSC209/Hwks/Hwk6/technical/technical.html
@@ -6,8 +6,16 @@
 <body>
 
 <h1>Game of Life</h1>
+<script>
+</script>
 <button id="next">Next</button>
 <br></br>
+<p>Number of rows: </p>
+<input id="rows"></input>
+<br> </br>
+<p>Number of columns: </p>
+<input id="cols"></input>
+<br> </br>
 <canvas id="canvas" width="500" height="500" style="border:1px solid #000000;"></canvas>
 <script src="js/script.js"></script>
 </body>
