--- a/CSC209/Hwks/Hwk6/technical/technical.html
+++ b/CSC209/Hwks/Hwk6/technical/technical.html
@@ -7,6 +7,8 @@
 
 <h1>Game of Life</h1>
 <script>
+    let rows = 50;
+    let cols = 50;
 </script>
 <button id="next">Next</button>
 <p>Number of rows: </p>
