--- a/CSC209/Hwks/Hwk6/creative/creative.html
+++ b/CSC209/Hwks/Hwk6/creative/creative.html
@@ -10,6 +10,7 @@
     let NRSTEPS = 0;
     let rows = 50;
     let cols = 50;
+    let intervalID;
 </script>
 <button id="next">Next</button>
 <button id="start">Start</button>
