--- a/CSC209/Weeks/Week8/Buggy/example.js.html
+++ b/CSC209/Weeks/Week8/Buggy/example.js.html
@@ -12,9 +12,10 @@
 	</script>
 		
 	<script>
-		const NRWEEKS=6;
+		
 
 		const LISTDATES =["Feb 1","Feb 8","Feb 15","Feb 21","March 1","March 8","March 15","March 21","April 1","April 8","April 15","April 21"];
+		const NRWEEKS = LISTDATES.length;
 		const LISTTOPICS=["Installation","Html","Css","Javascript 1","","","","","","","","",""];
 		const LISTDESCRIPTIONS=["We install software","We make our first Html","We style pages with Css","Get started on Javascript ","","","","","","","","",""];
 		
