--- a/CSC209/Hwks/Hwk7+8/Hwk7REDONE/hwk7StartPage.html
+++ b/CSC209/Hwks/Hwk7+8/Hwk7REDONE/hwk7StartPage.html
@@ -2,21 +2,22 @@
 <html>
 <head>
 <title>Homework 7</title>
+<link id="page" rel="stylesheet" href="../Hwk8/creative/darkmode.css">
 </head>
 <body>
 <h1>Homework 7</h1>
 
-<h2>Parts 1 and 2 of Lab 1 done and submitted in class Week 8. I had an error in my original homeowrk 7 submission where I realized I didn't utilize NRCOLS. In this version, I revised.</h2>
+<h2>Parts 1 and 2 of Lab 1 done and submitted in class Week 8. I had an error in my original homework 7 submission where I realized I didn't utilize NRCOLS. In this version, I revised.</h2>
 
 <ul>
     <li>
-        <a href="Part3/tutorials.html">Part 3 Tutorials</a>
+        <a href="Part3/tutorials.html">Part 3 Tutorials - 1.5 hours</a>
     </li>
     <li>
-        <a href="Part4/Part4.php">Part 4</a>
+        <a href="Part4/Part4.php">Part 4 - 30 minutes</a>
     </li>
     <li>
-        <a href="Part5+6/parts5+6startpage.html">Parts 5 and 6</a>
+        <a href="Part5+6/parts5+6startpage.html">Parts 5 and 6 - 1 hour</a>
     </li>
 
 </ul>
